* Wiki content alignment fixes. -Samuel

--- a/trunk/web/style.css
+++ b/trunk/web/style.css
@@ -17,6 +17,10 @@ ul, ol {
   border: 0px;
 }
 
+.error {
+  color: red;
+}
+
 img.logo {
   margin: 8px;
   margin-left: 17px;
@@ -62,6 +66,14 @@ a:visited .log_out {
 .trade {
   font-size: 0.6em;
   color: white;
+}
+
+table td {
+  vertical-align: top;
+}
+
+table.header td {
+  vertical-align: middle;
 }
 
 .wiki table {
